--- a/dumptruck.sample
+++ b/dumptruck.sample
@@ -12,6 +12,7 @@ profiles:
     restore:
       options: *RESTORE_OPTIONS
       filename: "ey"                          # ey = auto find most recent engineyard dump in output_path
+      filename_root: "ey_root_name"           # root name of file that ey is going to look for (defaults to schema_name if missing)
     backup:
       options: *BACKUP_OPTIONS
       filename: "dumptruck"
